plugins {
    id 'com.android.application'
}

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "sg.edu.np.mad.Sharecipe"
        minSdkVersion 19
        targetSdkVersion 30
        versionCode 9
        versionName "0.4.2-SNAPSHOT"

        vectorDrawables.useSupportLibrary true
        multiDexEnabled true

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
    implementation 'com.github.takusemba:multisnaprecyclerview:2.0.4'
    implementation 'com.facebook.shimmer:shimmer:0.5.0'
    implementation 'com.github.dhaval2404:imagepicker:2.1'
    implementation 'dev.haenara:bricksharedpref:1.0.2'
    implementation 'net.sourceforge.streamsupport:android-retrofuture:1.7.3'
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
    implementation "com.google.guava:guava:30.1.1-android"
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.google.android.material:material:1.4.0'

    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation "androidx.security:security-crypto:1.1.0-alpha03"
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.navigation:navigation-fragment:2.3.5'
    implementation 'androidx.navigation:navigation-ui:2.3.5'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}
